# air

airAPI/: main.py  pyproject.toml
airWEB/src/: index.html
airWEB/src/app/: app-routing.module.ts
airWEB/src/app/dashboard/: dashboard.module.ts
airWEB/src/app/shared/models/: region.model.ts
airWeb/src/app/: app.component.html
airWeb/src/app/core/api/: api-regions.service.ts
airWeb/src/app/dashboard/regions/: regions.component.html  regions.component.ts
airWeb/src/app/shared/: shared.module.ts
airWeb/src/app/shared/components/header/: header.component.html
